--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-
-# Created by https://www.gitignore.io/api/xcode,macos,cocoapods
-# Edit at https://www.gitignore.io/?templates=xcode,macos,cocoapods
-
-### CocoaPods ###
-## CocoaPods GitIgnore Template
-
-# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
-#           - Also handy if you have a large number of dependant pods
-#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
-Pods/
+# Created by https://www.toptal.com/developers/gitignore/api/swift,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=swift,macos
 
 ### macOS ###
 # General
@@ -18,6 +9,7 @@ Pods/
 
 # Icon must end with two \r
 Icon
+
 
 # Thumbnails
 ._*
@@ -38,7 +30,11 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### Xcode ###
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
+### Swift ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -63,16 +59,63 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 
-### Xcode Patch ###
-###*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-###!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
-**/xcshareddata/WorkspaceSettings.xcsettings
+## Obj-C/Swift specific
+*.hmap
 
-## Firebase
-GoogleService-Info.plist
+## App packaging
+*.ipa
+*.dSYM.zip
+*.dSYM
 
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
 
-# End of https://www.gitignore.io/api/xcode,macos,cocoapods
+# Swift Package Manager
+# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
+# Packages/
+# Package.pins
+# Package.resolved
+# *.xcodeproj
+# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
+# hence it is not needed unless you have added a package configuration file to your project
+# .swiftpm
+
+.build/
+
+# CocoaPods
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+# Pods/
+# Add this line if you want to avoid checking in source code from the Xcode workspace
+# *.xcworkspace
+
+# Carthage
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build/
+
+# Accio dependency management
+Dependencies/
+.accio/
+
+# fastlane
+# It is recommended to not store the screenshots in the git repo.
+# Instead, use fastlane to re-generate the screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/#source-control
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+
+# Code Injection
+# After new code Injection tools there's a generated folder /iOSInjectionProject
+# https://github.com/johnno1962/injectionforxcode
+
+iOSInjectionProject/
+
+# End of https://www.toptal.com/developers/gitignore/api/swift,macos
