update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 
+GoogleService-Info.plist
 iOSInjectionProject/
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,macos
